# griptape

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .release-please-manifest-backport.json  .release-please-manifest-main.json  .tool-versions  AMT_System_Architecture_Overview.md  ASYNC_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  GROWTH.md  LICENSE  MANIFEST.in  MIGRATION.md  Makefile  NOTICE  README.md  _Inputs.txt  _typos.toml  claude3.ipynb  hello-world.py  mise.toml  mkdocs.yml  playground.py  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  setup.py  test_lazy_loading.py
.github/: dependabot.yml  pull_request_template.md  release-please-config.hotfix.json  release-please-config.json  release-please-config.main.json  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  preapproved.md  tool_request.md
.github/scripts/: gen_snippet_logs.py
.github/workflows/: ci.yml  code-checks.yml  create-release.yml  create-stable-release.yml  docs-integration-tests-approval.yml  docs-integration-tests-runner.yml  docs-integration-tests.yml  docs-logs.yml  integration-test.yml  integration-tests.yml  publish.yml  pull-request-links.yml  quality.yml  release-backport.yml  release-main.yml  release.backport.yml  release.hotfix.yml  release.main.yml  release.yml  tests.yml  unit-tests.yml
docs/: conf.py  contributing.md  gen_ref_pages.py  gen_snippet_logs.py  getting-started.md  index.md  index.rst  pipelines-and-workflows.md
docs/examples/: amazon-dynamodb-sessions.md  index.md  load-and-query-pinecone.md  load-query-and-chat-marqo.md  multi-agent-workflow.md  multiple-agent-shared-memory.md  query-webpage-astra-db.md  query-webpage.md  talk-to-a-document.md  talk-to-a-pdf.md  talk-to-a-video.md  talk-to-a-webpage.md  talk-to-an-audio.md  talk-to-an-image.md  talk-to-redshift.md
docs/getting_started/: memory.md  structures.md  tools.md
docs/griptape-cloud/: index.md
docs/griptape-framework/: index.md
docs/griptape-tools/: index.md
docs/overrides/: main.html
docs/plugins/: swagger_ui_plugin.py
docs/recipes/: amazon-dynamodb-sessions.md  load-and-query-pinecone.md  load-query-and-chat-marqo.md  multi-agent-workflow.md  multiple-agent-shared-memory.md  query-webpage-astra-db.md  query-webpage.md  talk-to-a-document.md  talk-to-a-pdf.md  talk-to-a-video.md  talk-to-a-webpage.md  talk-to-an-audio.md  talk-to-an-image.md  talk-to-redshift.md
docs/tools/: custom_tools.md  index.md
examples/: async_agent_example.py  async_context_manager_example.py  async_event_listener_example.py  async_prompt_task_example.py
examples/tiamat_memory/: README.md  agent_with_tiamat.py
galaxybrain/: __init__.py  j2.py
galaxybrain/artifacts/: __init__.py  error_output.py  step_artifact.py  step_input.py  step_output.py  text_output.py
galaxybrain/completions/: __init__.py  completion.py  completion_result.py  completion_validator.py  openai_completion.py  validator.py
galaxybrain/drivers/: __init__.py  completion_driver.py  driver.py  openai_driver.py  openai_prompt_driver.py  prompt_driver.py
galaxybrain/memory/: __init__.py  buffer_memory.py  memory.py  summary_memory.py
galaxybrain/models/: openai.py
galaxybrain/prompts/: __init__.py  prompt.py  prompt_rule.py  result_validator.py
galaxybrain/rules/: __init__.py  conversation.py  json.py  meta.py  rule.py  validator.py
galaxybrain/schemas/: __init__.py  calculator_tool_schema.py  data_scientist_tool_schema.py  email_tool_schema.py  openai_prompt_driver_schema.py  ping_pong_tool_schema.py  pipeline_schema.py  polymorphic_schema.py  prompt_step_schema.py  rule_schema.py  step_schema.py  structure_schema.py  tiktoken_tokenizer_schema.py  tool_step_schema.py  toolkit_step_schema.py  wiki_tool_schema.py  workflow_schema.py
galaxybrain/steps/: __init__.py  base_tool_step.py  prompt_step.py  step.py  tool_step.py  tool_substep.py  toolkit_step.py
galaxybrain/structures/: __init__.py  pipeline.py  structure.py  workflow.py
galaxybrain/summarizers/: __init__.py  completion_driver_summarizer.py  driver_summarizer.py  prompt_driver_summarizer.py  summarizer.py
galaxybrain/tools/: __init__.py  calculator.py  data_scientist.py  tool.py  wiki.py
galaxybrain/utils/: __init__.py  conversation.py  j2.py  python_runner.py  tiktoken_tokenizer.py  tokenizer.py
galaxybrain/workflows/: __init__.py  base_tool_step.py  buffer_memory.py  completion_step.py  compute_step.py  memory.py  prompt_step.py  step.py  step_artifact.py  step_input.py  step_output.py  summary_memory.py  tool_action_step.py  tool_step.py  tool_substep.py  toolkit_step.py  workflow.py
griptape/: __init__.py  main.py
griptape/adapters/: base_adapter.py  chatgpt_plugin_adapter.py  langchain_tool_adapter.py
griptape/amt/: init.py
griptape/api/: __init__.py  api_generator.py  tool_api_generator.py
griptape/artifacts/: __init__.py  action_artifact.py  action_call_artifact.py  action_chunk_artifact.py  actions_artifact.py  audio_artifact.py  audio_url_artifact.py  base_artifact.py  base_chunk_artifact.py  base_media_artifact.py  base_system_artifact.py  base_text_artifact.py  blob_artifact.py  boolean_artifact.py  control_flow_artifact.py  csv_row_artifact.py  empty_artifact.py  error_artifact.py  error_output.py  file_artifact.py  generic_artifact.py  image_artifact.py  image_url_artifact.py  info_artifact.py  json_artifact.py  list_artifact.py  media_artifact.py  model_artifact.py  table_artifact.py  task_artifact.py  text_artifact.py  text_chunk_artifact.py  text_input.py  text_output.py  url_artifact.py  video_artifact.py  video_url_artifact.py
griptape/chunkers/: __init__.py  base_chunker.py  chunk_separator.py  markdown_chunker.py  pdf_chunker.py  recursive_chunker.py  semantic_chunker.py  text_chunker.py
griptape/common/: __init__.py  _lazy_loader.py  action.py  decorators.py  observable.py  reference.py
griptape/config/: __init__.py  amazon_bedrock_driver_config.py  amazon_bedrock_structure_config.py  (+26 more)
warpspeed/: __init__.py
(+3139 files in other folders)
